2010-08-02  Martin Robinson  <mrobinson@igalia.com>

Reviewed by Xan Lopez.

        [Gtk] DOM listeners get wrong keycodes for some keys
        https://bugs.webkit.org/show_bug.cgi?id=35170

        Modify some existing tests to test the generate key code of
        the keypad insert and delete keys as well as the print screen key.

        * fast/events/keydown-numpad-keys-expected.txt: Update expectations.
        * fast/events/script-tests/keydown-numpad-keys.js: Add test for keypad insert and delete.
        * fast/events/special-key-events-in-input-text-expected.txt: Update expectations.
        * fast/events/special-key-events-in-input-text.html: Add test for print screen.
2010-08-02  Martin Robinson  <mrobinson@igalia.com>

        Reviewed by Xan Lopez.

        [Gtk] DOM listeners get wrong keycodes for some keys
        https://bugs.webkit.org/show_bug.cgi?id=35170

        Emit the proper DOM keyCode for the print screen, keypad insert,
        and keypad delete keys.

        * platform/gtk/KeyEventGtk.cpp:
        (WebCore::windowsKeyCodeForKeyEvent): Fix mapping between GDK key codes
        and Windows key codes.
2010-08-02  Martin Robinson  <mrobinson@igalia.com>

        Reviewed by Xan Lopez.

        [Gtk] DOM listeners get wrong keycodes for some keys
        https://bugs.webkit.org/show_bug.cgi?id=35170

        Add support to all event senders for simulating keypad insert
        and print screen keys.

        * DumpRenderTree/chromium/EventSender.cpp:
        (EventSender::keyDown): Add support for generating keypad insert and print screen.
        * DumpRenderTree/gtk/EventSender.cpp:
        (keyDownCallback): Ditto.
        * DumpRenderTree/mac/EventSendingController.mm:
        (-[EventSendingController keyDown:withModifiers:withLocation:]): Ditto.
        * DumpRenderTree/qt/EventSenderQt.cpp:
        (EventSender::keyDown): Ditto.
        * DumpRenderTree/win/EventSender.cpp:
        (keyDownCallback): Ditto.

Canonical link: https://commits.webkit.org/55292@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@64470 268f45cc-cd09-0410-ab3c-d52691b4dbfc