WebKitTools/DumpRenderTree/mac/EventSendingController.mm
@@ -597,10 +597,18 @@ static int buildModifierFlags(const WebScriptObject* modifiers)
         const unichar ch = NSEndFunctionKey;
         eventCharacter = [NSString stringWithCharacters:&ch length:1];
         keyCode = 0x77;
+    } else if ([character isEqualToString:@"insert"]) {
+        const unichar ch = NSInsertFunctionKey;
+        eventCharacter = [NSString stringWithCharacters:&ch length:1];
+        keyCode = 0x72;
     } else if ([character isEqualToString:@"delete"]) {
         const unichar ch = NSDeleteFunctionKey;
         eventCharacter = [NSString stringWithCharacters:&ch length:1];
         keyCode = 0x75;
+    } else if ([character isEqualToString:@"printScreen"]) {
+        const unichar ch = NSPrintScreenFunctionKey;
+        eventCharacter = [NSString stringWithCharacters:&ch length:1];
+        keyCode = 0x0; // There is no known virtual key code for PrintScreen.
     }
 
     // Compare the input string with the function-key names defined by the DOM spec (i.e. "F1",...,"F24").
