WebKitTools/DumpRenderTree/qt/EventSenderQt.cpp
@@ -334,9 +334,15 @@ void EventSender::keyDown(const QString& string, const QStringList& modifiers, u
         } else if (string == QLatin1String("end")) {
             s = QString();
             code = Qt::Key_End;
+        } else if (string == QLatin1String("insert")) {
+            s = QString();
+            code = Qt::Key_Insert;
         } else if (string == QLatin1String("delete")) {
             s = QString();
             code = Qt::Key_Delete;
+        } else if (string == QLatin1String("printScreen")) {
+            s = QString();
+            code = Qt::Key_Print;
         }
     }
     QKeyEvent event(QEvent::KeyPress, code, modifs, s);
